# FSAI-Sim

./: .gitignore  .gitlab-ci.yml  README.md
fs_description/: CMakeLists.txt  package.xml
fs_description/maps/: skidpad.umdf.json  small_track.umdf.json
fs_description/maps/OptimumLap/: Lime_Rock_Park.OLTra
fs_description/materials/: gazebo.material
fs_description/meshes/: FS_Chassis.STL  FS_FL_Wheel.STL  FS_FL_Wheel_Steer.STL  FS_FR_Wheel.STL  FS_FR_Wheel_Steer.STL  FS_RL_Wheel.STL  FS_RR_Wheel.STL  FS_camera.STL
fs_description/models/asphalt_ground_plane/: model.config  model.sdf
fs_description/models/brick_ground_plane/: model.config  model.sdf
fs_description/models/dirt_ground_plane/: model.config  model.sdf
fs_description/models/pebble_ground_plane/: model.config  model.sdf
fs_description/robots/: FS_Vehicle_Mesh.urdf.xacro  flat_car.urdf.xacro  prius.xml
fs_description/robots/IMeche_car/: IMeche_Vehicle_Mesh.urdf.xacro
fs_description/sensors/: single_camera.urdf.xacro
fs_msgs/: CMakeLists.txt  package.xml
fs_msgs/msg/: AllCones.msg  Car.msg  Driver.msg  DriverMetadata.msg  GazeboStatus.msg  Lap.msg  Map.msg  MetaData.msg  MetaPoint.msg  MetaPointCollection.msg  MultipleCones.msg  MultiplePoints.msg  Penalty.msg  Report.msg  SingleCone.msg  VehiclePoseOnMap.msg
fs_msgs/srv/: AddReport.srv  GetCars.srv  GetDrivers.srv  GetFuzzedMap.srv  GetFuzzingConfiguration.srv  GetMap.srv  GetMaps.srv  GetReport.srv  GetReports.srv  GetSemiStaticMap.srv  LaunchGazebo.srv  SetFuzzingConfiguration.srv  SpawnCar.srv  StartDriver.srv
fs_utils/: package.xml  setup.cfg  setup.py
fs_utils/fs_utils/: conversions.py  faux_lidar.py  file_system.py  launch.py  parameters.py
fs_utils/fs_utils/fuzzing/: __init__.py  __main__.py  camera_fuzz_handler.py  fuzz_handler_abc.py  lidar_fuzz_handler.py  odom_fuzz_handler.py
simulator_manager/: package.xml  setup.cfg  setup.py
simulator_manager/launch/: gazebo.launch.py
simulator_manager/simulator_manager/: __main__.py  car_provider.py  car_spawner.py  driver_manager.py  gazebo_manager.py  simulator_manager_service.py
simulator_manager/simulator_manager/map_provider/: __init__.py  analyse_map.py  cone_generator.py  fsai_rules.py  generate_map.py  map.py  modify_map.py  optimumlap_map.py  optimumlap_parser.py  random_map.py  semi_static_maps.py  static_maps.py
simulator_manager/tools/: map_2_umdf.py
supervisor/: build_dashboard.py  package.xml  setup.py
supervisor/launch/: minimal.launch.py  no_sim_manager.launch.py  supervisor.launch.py
supervisor/supervisor/: __init__.py  __main__.py  ros_thread.py  setup.py
supervisor/supervisor/api/: __init__.py  optimumlap.py  reports.py  run.py  video_feeds.py
supervisor/supervisor/automation/: __init__.py  api_runner.py
supervisor/ui/: .eslintrc.json  .gitignore  package-lock.json  package.json
supervisor/ui/public/: index.html  (+1 more)
vehicle_evaluator/: Readme.md  package.xml  setup.cfg  setup.py
vehicle_evaluator/vehicle_evaluator/: __init__.py  __main__.py  racingline_calculator.py
(+131 files in other folders)
