<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tituszban@gmail.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>fs_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>xacro</depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
